refactored main container

--- a/src/components/mainContainer/styles.css
+++ b/src/components/mainContainer/styles.css
@@ -1,10 +1,10 @@
-.heading {
+.header {
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
 
-.containing {
+.container {
   display: flex;
   flex-direction: column;
   justify-content: center;
